# pt-down

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: index.html  main.js  output.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: stars-silhouette-11-2021993162
